--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,24 @@ filelock==3.0.12
 scipy==1.7.0
 coverage==5.5
 parameterized==0.8.1
-torchvision==0.10.0
+torchvision~=0.12.0
 nvidia_ml_py3==7.352.0
 matplotlib==3.1.3
 scikit_image==0.16.2
 tqdm==4.61.2
-pandas==1.0.5
-medutils==0.1.14
+pandas~=1.3.4
+medutils~=0.1.19
 kd_med==0.0.12
 nvidia_smi==0.1.3
 scikit_learn==1.0.1
 SimpleITK==2.1.1
-monai
+monai~=0.8.1
+numpy~=1.21.4
+torch~=1.11.0
+argparse~=1.4.0
+psutil~=5.9.0
+mlflow~=1.26.1
+sklearn~=0.0
+scikit-learn~=1.0.1
+pingouin~=0.5.0
+seaborn~=0.11.2
