--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,18 @@
         "**/.vscode/**": true,
         "**/mlruns/**": true,
         "**/results/**": true
-    }
+    },
+    "python.linting.flake8Enabled": false,
+    "python.linting.enabled": true,
+    "editor.rulers": [120],
+    "python.linting.pylintArgs": [
+        "-d",
+        "W0621",
+        "-d",
+        "C0103",
+        
+        "--max-line-length=120",
+    ],
+    "python.linting.pylintEnabled": true,
+
 }
